# soldojo

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  CMS_GUIDE.md  CUSTOMIZATION.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
prisma/: schema.prisma  seed.ts
programs/soldojo/: Cargo.toml
programs/soldojo/src/: lib.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/courses/: loading.tsx  page.tsx
src/app/dashboard/: loading.tsx  page.tsx
src/app/leaderboard/: loading.tsx  page.tsx
src/app/profile/: page.tsx
src/app/settings/: page.tsx
src/components/: providers.tsx
src/components/editor/: code-editor.tsx
src/components/layout/: footer.tsx  header.tsx
src/components/providers/: solana-provider.tsx
src/contexts/: locale-context.tsx
src/hooks/: index.ts  use-complete-lesson.ts  use-course.ts  use-courses.ts  use-dashboard.ts  use-enroll.ts  use-leaderboard.ts  use-lesson.ts  use-onchain.ts  use-profile.ts  use-update-profile.ts
src/lib/: query-client.ts  utils.ts
src/lib/analytics/: index.ts  provider.tsx
src/lib/api/: client.ts  utils.ts
src/lib/auth/: config.ts  index.ts
src/lib/challenge-runner/: challenge-runner.test.ts  index.ts  rust-validator.ts  typescript-runner.ts
src/lib/cms/: client.ts  schema.ts
src/lib/i18n/: en.ts  es.ts  index.ts  pt-br.ts
src/lib/services/: achievements.test.ts  achievements.ts  learning-progress.ts
src/lib/solana/: cnft.ts  config.ts  (+3 more)
src/types/: index.ts
(+15 files in other folders)
