[package]
name = "soldojo"
version = "0.1.0"
description = "SolDojo on-chain course completion and credential program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soldojo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
